--- a/application/static/css/main.css
+++ b/application/static/css/main.css
@@ -100,7 +100,8 @@ form label {
 
 form input#name,
 form input#email,
-form input#file{
+form input#file
+form input#number{
   width: 400px;
   background-color: #fafafa;
   -webkit-border-radius: 3px;
