--- a/application/templates/fibonacci.html
+++ b/application/templates/fibonacci.html
@@ -2,12 +2,19 @@
 
 {% block content %}
 <h2>Fibonacci</h2>
-
+{% include 'flash.html' %}
 <form action="{{ url_for('fibonacci') }}" method="post">
     {{ form.hidden_tag() }}
 
-    {{ form.number.label }}
-    {{ form.number}}
+    <div class="control-group{% if form.number.errors %} error{% endif %}">
+        <label class="control-label" for="number">Number</label>
+        <div class="controls">
+            {{ form.number }}
+            {% for error in form.number.errors %}
+            <span class="help-inline">[{{ error }}]</span><br>
+            {% endfor %}
+        </div>
+    </div>
 
     {{ form.submit }}
 </form>
