--- a/application/templates/home.html
+++ b/application/templates/home.html
@@ -1,7 +1,10 @@
 {% extends "layout.html" %}
 {% block content %}
-  <div class="jumbo">
-    <h2>Welcome to the Flask app</h2>
-    <h3>This is the home page for the Flask app</h3>
-  </div>
+{% include 'flash.html' %}
+<div class="jumbo">
+    <h2>Questions</h2>
+    <h3><a href="{{url_for('fibonacci')}}">Fibonacci Series</a> </h3>
+    <h3><a href="{{url_for('fileUpload')}}">Upload File</a> </h3>
+    <h3><a href="{{url_for('logout')}}">Test User Login</a> </h3>
+</div>
 {% endblock %}
