--- a/application/templates/layout.html
+++ b/application/templates/layout.html
@@ -1,34 +1,47 @@
 <!DOCTYPE html>
 <html>
-  <head>
+<head>
+    <link href="/static/css/bootstrap.min.css" rel="stylesheet" media="screen">
+    <link href="/static/css/bootstrap-responsive.min.css" rel="stylesheet">
+    <script src="http://code.jquery.com/jquery-latest.js"></script>
+    <script src="/static/js/bootstrap.min.js"></script>
+    <script src="/static/js/moment.min.js"></script>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    {% if title %}
+    <title>{{title}}</title>
+    {% else %}
     <title>Flask App</title>
+    {% endif %}
     <link rel="stylesheet" href="{{ url_for('static', filename='css/main.css') }}">
-  </head>
-  <body>
+</head>
+<body>
 
-  <header>
+<header>
     <div class="container">
-      <h1 class="logo">Flask App</h1>
-      <nav>
-        <ul class="menu">
-          <li><a href="{{ url_for('home') }}">Home</a></li>
-          <li><a href="{{ url_for('about') }}">About</a></li>
-          {% if 'email' in session %}
-          <li><a href="{{ url_for('profile') }}">Profile</a></li>
-          <li><a href="{{ url_for('signout') }}">Sign Out</a></li>
-          {% else %}
-          <li><a href="{{ url_for('signup') }}">Sign Up</a></li>
-          <li><a href="{{ url_for('signin') }}">Sign In</a></li>
-          {% endif %}
-        </ul>
-      </nav>
+        {% if user %}
+        <h1 class="logo">{{user}}'s App</h1>
+        {% else %}
+        <h1 class="logo">Flask App</h1>
+        {% endif %}
+        <nav>
+            <ul class="menu">
+                <li><a href="{{ url_for('home') }}">Home</a></li>
+                {% if user %}
+                <li><a href="{{ url_for('profile') }}">Profile</a></li>
+                <li><a href="{{ url_for('logout') }}">Logout</a></li>
+                {% else %}
+                <li><a href="{{ url_for('register') }}">Sign Up</a></li>
+                <li><a href="{{ url_for('login') }}">Login</a></li>
+                {% endif %}
+            </ul>
+        </nav>
     </div>
-  </header>
+</header>
 
-    <div class="container">
-      {% block content %}
-      {% endblock %}
-    </div>
+<div class="container">
+    {% block content %}
+    {% endblock %}
+</div>
 
-  </body>
+</body>
 </html>
