--- a/application/templates/profile.html
+++ b/application/templates/profile.html
@@ -1,7 +1,8 @@
 {% extends "layout.html" %}
 {% block content %}
+{% include 'flash.html' %}
   <div class="jumbo">
     <h2>Profile<h2>
-    <h3>This is {{ session['email'] }}'s profile page<h3>
+    <h3>This is {{user}}'s profile page<h3>
   </div>
 {% endblock %}
