--- a/application/templates/layout.html
+++ b/application/templates/layout.html
@@ -28,6 +28,7 @@
                 <li><a href="{{ url_for('home') }}">Home</a></li>
                 {% if user %}
                 <li><a href="{{ url_for('profile') }}">Profile</a></li>
+                <li><a href="https://github.com/Sauvikk/assignment">Source</a></li>
                 <li><a href="{{ url_for('logout') }}">Logout</a></li>
                 {% else %}
                 <li><a href="{{ url_for('register') }}">Sign Up</a></li>
