--- a/application/templates/fibonacci.html
+++ b/application/templates/fibonacci.html
@@ -12,7 +12,7 @@
             {{ form.number }}
             {% if form.number.errors[0] %}
             <span class="help-inline">[{{ form.number.errors[0] }}]</span><br>
-            {% endfor %}
+            {% endif %}
         </div>
     </div>
 
